--- a/index.html
+++ b/index.html
@@ -37,22 +37,26 @@
                                 <a class="nav-link text-center fs-5 text-white" href="#">Para postulantes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-center fs-5 text-white" href="#">Soy empresa</a>
+                                <a class="nav-link text-center fs-5 text-white" href="https://easyjobsweb-38761.web.app/login-Company">Soy empresa</a>
                             </li>
                             <li class="nav-item">
                                 <div class="white-line"></div>
                             </li>
                             <li class="nav-item">
-                                <button type="button" class="btn  btn-primary ms-4 nav-boton" style="    background: white !important;
-                                color: purple !important;
-                                border-color: white;
-                                border-radius: 23px;">Registrarse</button>
+                                <a href="https://easyjobsweb-38761.web.app/register-postulant">
+                                    <button type="button" class="btn  btn-primary ms-4 nav-boton" style="    background: white !important;
+                                    color: purple !important;
+                                    border-color: white;
+                                    border-radius: 23px;">Registrarse</button>
+                                </a>
                             </li>
                             <li class="nav-item">
-                                <button type="button" class="btn  btn-primary ms-4 nav-boton" style="    background: white !important;
-                                color: purple !important;
-                                border-color: white;
-                                border-radius: 23px;">Ingresar</button>
+                                <a href="https://easyjobsweb-38761.web.app/login-Postulant">
+                                    <button type="button" class="btn  btn-primary ms-4 nav-boton" style="    background: white !important;
+                                    color: purple !important;
+                                    border-color: white;
+                                    border-radius: 23px;">Ingresar</button>
+                                </a>
                             </li>
                         </ul>
 
