--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-center fs-5 text-white" href="#"
+                  <a
+                    class="nav-link text-center fs-5 text-white"
+                    href="https://easyjobsweb-38761.web.app/login-company"
                     >I am a company</a
                   >
                 </li>
@@ -40,22 +42,25 @@
                   <div class="white-line"></div>
                 </li>
                 <li class="nav-item">
-                  <button
-                    type="button"
-                    class="btn btn-primary ms-4 nav-boton"
-                    style="
-                      background: white !important;
-                      color: purple !important;
-                      border-color: white;
-                      border-radius: 23px;
-                    "
+                  <a
+                    href="https://easyjobsweb-38761.web.app/register-postulant"
                   >
-                    Sign up
-                  </button>
-                </li>
-                <li class="nav-item">
-                  <a href=""
-                    ><button
+                    <button
+                      type="button"
+                      class="btn btn-primary ms-4 nav-boton"
+                      style="
+                        background: white !important;
+                        color: purple !important;
+                        border-color: white;
+                        border-radius: 23px;
+                      "
+                    >
+                      Sign up
+                    </button>
+                  </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="https://easyjobsweb-38761.web.app/login-postulant"><button
                       type="button"
                       class="btn btn-primary ms-4 nav-boton"
                       style="
@@ -394,6 +399,32 @@
             height="315"
             src="https://www.youtube.com/embed/fxCdIgoL2yY"
             title="About EasyJobs Team"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <!--About the product-->
+    <div class="container-fluid justify-content-evenly about">
+      <div class="row title-about">
+        <div class="col d-flex justify-content-center">
+          <h2
+            class="fs-1 text-primary mt-4"
+            style="color: var(--main-color) !important"
+          >
+            About the product
+          </h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col d-flex justify-content-center">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/l6T21xoxrv8"
+            title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
